test/conformance/kuttl/verifyImages/clusterpolicy/standard/imageExtractors-complex-keyless/02-task.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- task.yaml
errors:
- task.yaml
